# YT_Downloader

./: README.md  main.py  pyproject.toml  requirements.txt
core/: settings.py
core/database/: db_client.py
core/filters/: isYoutubeUrl.py
core/handlers/: audio_downloader.py  basic.py  video_downloader.py
core/keyboards/: create_download_keyboard.py
core/utils/: states.py
