[tool.poetry]
name = "yt-downloader"
version = "0.1.0"
description = ""
authors = ["lap1as <kuzukoleg12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
aiogram = "^3.4.1"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
